syntax = "proto3";

package example.com.concert.v1;

option go_package = "example.com/pkg/api/concert/v1";

import "google/api/annotations.proto";
import "google/api/resource.proto";
import "google/api/field_behavior.proto";
import "google/api/client.proto";
import "google/protobuf/any.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";
import "pkg/api/concert/v1/catalog.proto";

service BookingService {
  rpc ListBookings(ListBookingsParam) returns (ListBookingsResult) {
    option (google.api.http) = {
      get: "/api/concert/v1/bookings"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "List Bookings"
    };
  }

  rpc CreateBooking(CreateBookingParam) returns (CreateBookingResult) {
    option (google.api.http) = {
      post: "/api/concert/v1/bookings"
      body:"booking"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Create New Booking"
    };
  }

  rpc GetBooking(GetBookingParam) returns (GetBookingResult) {
    option (google.api.http) = {
      get: "/api/concert/v1/bookings/{booking}"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Get Booking"
    };
  }

  rpc ReserveBooking(ReserveBookingParam) returns (ReserveBookingResult) {
    option (google.api.http) = {
      post: "/api/concert/v1/bookings/{booking}:reserve"
      body:"*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Reserve Booking"
    };
  }

  rpc ExpireBooking(ExpireBookingParam) returns (ExpireBookingResult) {
    option (google.api.http) = {
      post: "/api/concert/v1/bookings/{booking}:expire"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Expire Booking"
    };
  }
}

message ListBookingsParam {
  string invoice = 1 [
    (google.api.field_behavior) = OPTIONAL,
    (google.api.resource_reference) = {
      type: "payment.concert.com/Invoice"
    }];
  Status status = 2;
  uint64 page_size = 3;
  string page_token = 4;
  string order_by = 5;
}

message ListBookingsResult {
  repeated Booking bookings = 1;
  string next_page_token = 2;
}

message CreateBookingParam {
  Booking booking = 1 [(google.api.field_behavior) = REQUIRED];
}

message CreateBookingResult {
  Booking booking = 1;
}

message GetBookingParam {
  string booking = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {
      type: "concert.example.com/Booking"
    }];
}

message GetBookingResult {
  Booking booking = 1;
}

message ReserveBookingParam {
  string booking = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {
      type: "concert.example.com/Booking"
    }];
}

message ReserveBookingResult {

}

message ExpireBookingParam {
  string booking = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {
      type: "concert.example.com/Booking"
    }];
}

message ExpireBookingResult {

}

message Booking {
  option (google.api.resource) = {
    type: "concert.example.com/Booking"
    pattern: "bookings/{booking}"
    singular: "booking"
    plural: "bookings"
  };

  string number = 1 [(google.api.field_behavior) = OUTPUT_ONLY];
  string concert = 2 [(google.api.resource_reference) = {
    type: "concert.example.com/Concert"
  }];
  string show = 3 [(google.api.resource_reference) = {
    type: "concert.example.com/ConcertShow"
  }];
  double price = 4 [(google.api.field_behavior) = OUTPUT_ONLY];
  string currency = 5 [(google.api.field_behavior) = OUTPUT_ONLY];
  Status status = 6 [(google.api.field_behavior) = OUTPUT_ONLY];
  google.protobuf.Timestamp created_at = 7 [(google.api.field_behavior) = OUTPUT_ONLY];
  google.protobuf.Timestamp reserved_at = 8 [(google.api.field_behavior) = OUTPUT_ONLY];
  google.protobuf.Timestamp paid_at = 9 [(google.api.field_behavior) = OUTPUT_ONLY];
  Customer customer = 10;
  Payment payment = 11;
  google.protobuf.Timestamp expired_at = 12 [(google.api.field_behavior) = OUTPUT_ONLY];
  google.protobuf.Timestamp failed_at = 13 [(google.api.field_behavior) = OUTPUT_ONLY];
}

enum Status {
  BOOKING_UNSPECIFIED = 0;
  CREATED = 1;
  RESERVED = 2;
  COMPLETED = 3;
  FAILED = 4;
  EXPIRED = 5;
}

message Address {
  string street_address = 1;
  string apt_suite = 2;
  string city = 3;
  string country = 4;
  string zip_code = 5;
  string state = 6;
}

message Customer {
  string name = 1;  
  string email = 2;
  string phone_number = 3;
  Address shipping_address = 4;
  Address billing_address = 5;
}

message Payment {
  string invoice_number = 1 [(google.api.field_behavior) = OUTPUT_ONLY];
  string method = 2;
}

